--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <img src="asset/unnamed.jpg" alt="Chetalonso">
                 </div>
                 <h1 class="profile-name">CHETALONSO <span class="aguila">🦅</span></h1>
+                <p class="profile-bio">streamer · músico · creador</p>
             </div>
 
             <!-- Enlaces principales -->
@@ -57,6 +58,11 @@
                     <i class="fab fa-discord"></i>
                     <span class="icon-label">Discord</span>
                 </a>
+            </div>
+
+            <!-- Footer -->
+            <div class="footer">
+                <p>🦅 in da house</p>
             </div>
         </div>
     </div>
